 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.6rc1

 - [ZBX-3731] fixed possible SQL errors when updating trends (Sasha)
 - [ZBX-3772] improved performance of the history syncer (Sasha)
 - [ZBX-3547] Rewrote performance counters and cpu stats collection for Windows (rudolfs)
 - [ZBX-3677] added unit blacklist on the server side (dimir)
 - [ZBX-3746] Fixed parsing of trigger expressions containing \\ (KB)
 - [ZBX-3744] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-3681] fixed API to leave internal PHP encoding in UTF-8 (Alexei)
 - [ZBX-3353] fixed skipping web items in the host "Full clone" operation (Sasha)
 - [ZBX-3503] fixed "incorrect usage of quotes" error (KB)
 - [ZBX-3740] fixed compilation errors due to undefined SOL_IPV6 (asaveljevs,rudolfs,Sasha)
 - [ZBX-2952] added Base64 data line wrapping in Email notifications (dimir)
 - [ZBX-3698] fixed error in log wizard when expression had internal parentheses (KB)
 - [ZBX-524] added log messages when syncing a proxy configuration data (Sasha)
 - [ZBX-3671] fixed ORACLE SQL error when processing of the trigger function count() (Sasha)

Changes for 1.8.5

 - [ZBX-3686] updated French translation; thanks to Joseph Bueno (Richlv)

Changes for 1.8.5rc1

 - [ZBX-3672] fixed possible hang of history syncers when a zabbix[log] message is added while processing history data (Sasha)
 - [ZBX-3644] fixed API permission checks for applications, items and triggers (Vedmak)
 - [ZBX-3673] fixed processing of operators & and | in trigger and calculated items expressions (Sasha)
 - [ZBX-3660] fixed macro resolving in map labels (Vedmak)