@@ -228,7 +228,7 @@ void	free_metrics();
 
 int	process(const char *in_command, unsigned flags, AGENT_RESULT *result);
 
-int	add_user_parameter(char *key, char *command);
+int	add_user_parameter(const char *key, char *command);
 void	test_parameters();
 void	test_parameter(const char *key, unsigned flags);
 
